# rust-cookbook

./: .env  .gitignore  Cargo.toml
src/: ansi_terminal.rs  big_integers.rs  character_set.rs  complex_numbers.rs  constants.rs  cryptography.rs  csv_column_transform.rs  csv_reader.rs  csv_record_filter.rs  csv_record_serialize.rs  csv_serde_serialize.rs  custom_struct.rs  data_structures.rs  database.rs  deserialize_data_into_structures.rs  downloads.rs  duration_calculation.rs  error_handling.rs  external_command.rs  extract_links.rs  file_io.rs  file_utils.rs  handle_invalid_csv_data.rs  json_structured_data.rs  linear_algebra.rs  log_msg.rs  main.rs  make_requests.rs  mime_types.rs  parallel_tasks.rs  parse_cli.rs  parse_datetime.rs  random_values.rs  regular_expressions.rs  sorting_vectors.rs  statistics.rs  std_csv_reader.rs  string_parsing.rs  tarballs.rs  threads_pipelines.rs  (+4 more)
