[package]
name = "rust-cookbook"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = '0.8.5'
rand_distr = '0.4.3'
clap = "4.5.17"
ansi_term = "0.12.1"
flate2 = "1.0.33"
tar = "0.4.41"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
walkdir = "2.5.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
ring = "0.17.8"
rayon = "1.10.0"
