[package]
name = "rust-cookbook"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = '0.8.5'
rand_distr = '0.4.3'
clap = "4.5.17"
ansi_term = "0.12.1"
flate2 = "1.0.33"
tar = "0.4.41"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
walkdir = "2.5.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
ring = "0.17.8"
rayon = "1.10.0"
glob = "0.3.1"
image = "0.25.2"
data-encoding = "2.6.0"
bitflags = "2.6.0"
rusqlite = "0.32.1"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
syslog = "7.0.0"
percent-encoding = "2.3.1"
url = "2.5.2"
csv = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
error-chain = "0.12.4"
reqwest = { version = "0.12.7", features = ["blocking"] }
same-file = "1.0.6"
memmap = "0.7.0"
regex = "1.10.6"
